[project]
name = "biotech"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cell2location>=0.1.5",
    "deconomix>=1.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scanpy>=1.12",
    "scvi-tools>=1.4.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
